# nlp-jan-2026

./: README.md  pyproject.toml
lecture1/: assignment.md  rule_based_classifier.ipynb  trained_bow_classifier.ipynb
lecture2/: bow.ipynb  bow_tok.model  bow_tok.vocab  bow_tokenizer_txt.txt  class.ipynb  tokenization.ipynb  word2vec.ipynb
lecture3/: bigram.ipynb  bigrams_EDA.ipynb  generate_notebook.py  review_summarization.ipynb  review_summarization_teaching.ipynb
lecture4/: recurrent_encdec.ipynb  recurrent_lm.ipynb
lecture5/: transformer.ipynb
