[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "gensim>=4.4.0",
    "huggingface-hub>=1.3.5",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.1",
    "pandas>=3.0.0",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]
